--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
           <div class="row">
             <div class="col-sm-8 col-md-7 py-4">
               <h4 class="text-white">About</h4>
-              <p class="text-white">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+              <p class="text-white">We have the most Dynamic team of young professionals, who are dedicated to meet the customer needs. We offer comparative price and services that no one else can give offer you. Our goal is to provide Quality services and build trust and relationship with our customers. We are operating out of Kolkata, India. Contact us with any kind of queries.</p>
             </div>
             <div class="col-sm-4 offset-md-1 py-4">
               <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
-                <li><a href="#" class="text-white">Follow on Twitter</a></li>
-                <li><a href="#" class="text-white">Like on Facebook</a></li>
-                <li><a href="#" class="text-white">Email me</a></li>
+                <li><a href="mailto:4mango.web@gmail.com" class="text-white">Email us (4mango.web@gmail.com)</a></li>
               </ul>
             </div>
           </div>
@@ -55,8 +53,8 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">Album example</h1>
-          <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+          <h1 class="jumbotron-heading">4Mango Solutions</h1>
+          <p class="lead text-muted">We are there to help you in transforming your business into Digital mode. The services are fully customizable and dedicated to your business needs. Contact us for details and our offerings.</p>
           <p>
             <a href="#" class="btn btn-primary my-2">Main call to action</a>
             <a href="#" class="btn btn-secondary my-2">Secondary action</a>
@@ -70,142 +68,109 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                <h2 class="px-3 py-3 text-white bg-dark">Setup Small And Mid Size Business</h2>
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>
+                    <ul class="pl-4">
+                      <li>You have a decent size business and struggling with repetitive tasks which needs automation on day to day basis</li>
+                      <li>Planning to organise your employee records</li>
+                      <li>Operational automation and cost effective & faster response</li>
+                      <li>Custom IT solution for your specific needs</li>
+                    </ul>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                <h2 class="px-3 py-3 text-white bg-dark">Security, Backup And Recovery</h2>
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>
+                  <ul class="pl-4">
+                    <li>Continuous business means a solid backup & recovery system</li>
+                    <li>Keep your business data safe & secure</li>
+                    <li>Recover at the time of unknown disaster to help you able to run the business</li>
+                    <li>Avoid human errors and cyber threats</li>
+                  </ul>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                <h2 class="px-3 py-3 text-white bg-dark">Planning your online presence</h2>
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-4">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>
+                  <ul class="pl-4">
+                    <li>Custom branded website</li>
+                    <li>Optimise your content for search engines (SEO)</li>
+                    <li>Content tagging & indexing</li>
+                    <li>Monitoring and maintaining</li>
+                    <li>Digital marketing via social media campaign</li>
+                    <li>AdWords setup for your business</li>
+                    <li>Web hosting for your business with modern and upgraded technology suites</li>
+                  </ul>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                <h2 class="px-3 py-3 text-white bg-dark">Content Management System (CMS)</h2>
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>
+                  <ul class="pl-4">
+                    <li>Build your own custom content management system</li>
+                    <li>Integrate and exchange data with other CMSs</li>
+                    <li>Learning tool integration for your class room/course at an university</li>
+                    <li>Custom content workflow design</li>
+                  </ul>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                <h2 class="px-3 py-3 text-white bg-dark">Multi-Channel Publishing</h2>
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-4">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>
+                  <ul class="pl-4">
+                    <li>Custom content publishing tool for your business need</li>
+                    <li>Write once and distribute in various end points or via medium such as mobile (ios/android etc) & desktop browsers</li>
+                    <li>Controlled distribution and publishing of your content</li>
+                    <li>Interact with LMS tools from your custom course portal</li>
+                  </ul>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                <h2 class="px-3 py-3 text-white bg-dark">Learning And Education are top priority</h2>
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>
+                  <ul class="pl-4">
+                    <li>Student and teacher interaction with awesome tools & custom web application</li>
+                    <li>LMS integration of various types</li>
+                    <li>Build community around education & make learning fun</li>
+                    <li>Assessment creating, delivery and scoring based upon your own need</li>
+                  </ul>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                <h2 class="px-3 py-3 text-white bg-dark">Ready for all situation</h2>
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>
+                  <ul class="pl-4">
+                    <li>Make content and web application ready for 508 or any other major accessibility tool ready</li>
+                    <li>Distribute content and application in multiple location</li>
+                    <li>Caching, Content Delivery strategies(CDN) & other kind of integration for your web application</li>
+                  </ul>
                 </div>
               </div>
             </div>
-          </div>
+            <div class="col-md-4">
+              <div class="card mb-4 box-shadow">
+                <h2 class="px-3 py-3 text-white bg-dark">Simply Consulting</h2>
+                <div class="card-body">
+                  <ul class="pl-4">
+                    <li>Make your existing web application more attractive in terms of usability, performance to drive more incoming traffic</li>
+                    <li>SEO, Accessibility consulting</li>
+                    <li>Process improvement ideas and plans for your organisation</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
 
@@ -216,8 +181,8 @@
         <p class="float-right">
           <a href="#">Back to top</a>
         </p>
-        <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-        <p>New to Bootstrap? <a href="../../">Visit the homepage</a> or read our <a href="../../getting-started/">getting started guide</a>.</p>
+        <p>&copy; 2018-2020 4Mango Solutions
+        <p>All Rights Reserved</p>
       </div>
     </footer>
 
