--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <h2 class="px-3 py-3 text-white bg-dark">Setup Small And Mid Size Business</h2>
+                <h2 class="px-3 py-3 text-white bg-dark h3">Setup Small And Mid Size Business</h2>
                 <div class="card-body">
                     <ul class="pl-4">
                       <li>You have a decent size business and struggling with repetitive tasks which needs automation on day to day basis</li>
@@ -81,7 +81,7 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <h2 class="px-3 py-3 text-white bg-dark">Security, Backup And Recovery</h2>
+                <h2 class="px-3 py-3 text-white bg-dark h3">Security, Backup And Recovery</h2>
                 <div class="card-body">
                   <ul class="pl-4">
                     <li>Continuous business means a solid backup & recovery system</li>
@@ -94,7 +94,7 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <h2 class="px-3 py-3 text-white bg-dark">Planning your online presence</h2>
+                <h2 class="px-3 py-3 text-white bg-dark h3">Planning your online presence</h2>
                 <div class="card-body">
                   <ul class="pl-4">
                     <li>Custom branded website</li>
@@ -110,7 +110,7 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <h2 class="px-3 py-3 text-white bg-dark">Content Management System (CMS)</h2>
+                <h2 class="px-3 py-3 text-white bg-dark h3">Content Management System (CMS)</h2>
                 <div class="card-body">
                   <ul class="pl-4">
                     <li>Build your own custom content management system</li>
@@ -123,7 +123,7 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <h2 class="px-3 py-3 text-white bg-dark">Multi-Channel Publishing</h2>
+                <h2 class="px-3 py-3 text-white bg-dark h3">Multi-Channel Publishing</h2>
                 <div class="card-body">
                   <ul class="pl-4">
                     <li>Custom content publishing tool for your business need</li>
@@ -136,7 +136,7 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <h2 class="px-3 py-3 text-white bg-dark">Learning And Education are top priority</h2>
+                <h2 class="px-3 py-3 text-white bg-dark h3">Learning And Education are top priority</h2>
                 <div class="card-body">
                   <ul class="pl-4">
                     <li>Student and teacher interaction with awesome tools & custom web application</li>
@@ -149,7 +149,7 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <h2 class="px-3 py-3 text-white bg-dark">Ready for all situation</h2>
+                <h2 class="px-3 py-3 text-white bg-dark h3">Ready for all situation</h2>
                 <div class="card-body">
                   <ul class="pl-4">
                     <li>Make content and web application ready for 508 or any other major accessibility tool ready</li>
@@ -161,7 +161,7 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
-                <h2 class="px-3 py-3 text-white bg-dark">Simply Consulting</h2>
+                <h2 class="px-3 py-3 text-white bg-dark h3">Simply Consulting</h2>
                 <div class="card-body">
                   <ul class="pl-4">
                     <li>Make your existing web application more attractive in terms of usability, performance to drive more incoming traffic</li>
