--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <div class="navbar navbar-dark bg-primary box-shadow">
         <div class="container d-flex justify-content-between">
-          <a href="#" class="navbar-brand align-items-center">
+          <a href="" class="navbar-brand align-items-center">
             <img src="images/site-logo.png" title="4Mango" alt="4Mango"/>
             <div class="text-nowrap font-weight-light h6 ml-2">The complete IT solution Provider.</div>
           </a>
@@ -56,8 +56,7 @@
           <h1 class="jumbotron-heading">4Mango Solutions</h1>
           <p class="lead text-muted">We are there to help you in transforming your business into Digital mode. The services are fully customizable and dedicated to your business needs. Contact us for details and our offerings.</p>
           <p>
-            <a href="#" class="btn btn-primary my-2">Main call to action</a>
-            <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+            <a href="connect.html" class="btn btn-primary my-2">Connect With Us</a>
           </p>
         </div>
       </section>
